quicklog/tests/failures/struct_missing_clone.stderr
error[E0599]: the method `to_owned` exists for struct `SimpleStruct`, but its trait bounds were not satisfied
  --> tests/failures/struct_missing_clone.rs:12:5
   |
12 |     info!(s1, "struct does not implement Clone");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `SimpleStruct` due to unsatisfied trait bounds
   |
  ::: tests/failures/../common/mod.rs
   |
   | pub(crate) struct SimpleStruct {
   | ------------------------------
   | |
   | method `to_owned` not found for this struct
   | doesn't satisfy `SimpleStruct: Clone`
   | doesn't satisfy `SimpleStruct: ToOwned`
   |
   = note: the following trait bounds were not satisfied:
           `SimpleStruct: Clone`
           which is required by `SimpleStruct: ToOwned`
   = note: this error originates in the macro `info` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `SimpleStruct` with `#[derive(Clone)]`
  --> tests/failures/../common/mod.rs
   |
    + #[derive(Clone)]
    |
